<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/BackColor" >

    <!-- 買物出発確認ダイアログ -->


	<!-- タイトル行 -->
    <TextView
        style="@style/TitleBack"
        android:text="@string/shoppinglist_day_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        />

    <!-- 説明 -->
    <TextView
        style="@style/Text"
        android:text="@string/day_color_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        />

<!--========================================
        メイン画面
    ======================================== -->
    <LinearLayout
    	style="@style/BackWhite"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
        android:padding="8dp"
    	>

        <TextView
            style="@style/Day"
            android:text="@string/day_color1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/day_green"
            android:padding="3dp"
            android:layout_margin="2dp"
            />

        <TextView
            style="@style/Day"
            android:text="@string/day_color2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/day_lightgreen"
            android:padding="3dp"
            android:layout_margin="2dp"
            />

        <TextView
            style="@style/Day"
            android:text="@string/day_color3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/day_yellow"
            android:padding="3dp"
            android:layout_margin="2dp"
            />

        <TextView
            style="@style/Day"
            android:text="@string/day_color4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/day_orange"
            android:padding="3dp"
            android:layout_margin="2dp"
            />

        <TextView
            style="@style/Day"
            android:text="@string/day_color5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/day_red"
            android:padding="3dp"
            android:layout_margin="2dp"
            />

        <TextView
            style="@style/Day"
            android:text="@string/day_color6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/day_brown"
            android:padding="3dp"
            android:layout_margin="2dp"
            />

        <TextView
            style="@style/Day"
            android:text="@string/day_color7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/day_gray"
            android:padding="3dp"
            android:layout_margin="2dp"
            />
    </LinearLayout>

<!--========================================
      　ボタン行
    ======================================== -->
    <Button
      	android:id="@+id/button_ok"
    	style="@style/PositiveButton"
      	android:text="@string/ok"
     	android:layout_width="match_parent"
      	android:layout_height="wrap_content"
    	/>
</LinearLayout>
